--- a/app-frontend/src/app/app.component.html
+++ b/app-frontend/src/app/app.component.html
@@ -1,1 +1,60 @@
-<p>Test</p>
+<nav class="navbar">
+  <div class="navbar-left">
+    <a href="app.component.html" class="logo"><img src=""></a>
+
+  </div>
+  <div class="navbar-center">
+    <ul>
+      <li><a href="#" class="active-link"><img src=""> <span>Home</span></a></li>
+      <li><a href="#"><img src=""> <span>Stwórz projekt</span></a></li>
+      <li><a href="#"><img src=""> <span>Przydzielanie zespołów</span></a></li>
+      <li><a href="#"><img src=""> <span>użytkownicy</span></a></li>
+      <li><a href="#"><img src=""> <span>coś tam</span></a></li>
+    </ul>
+  </div>
+  <div class="navbar-right">
+   <div class="user-structure">
+   
+    <img src="" class="nav-profile-img">
+    <p>Franek</p>
+   </div>
+  </div>
+</nav>
+
+<!-- ---------------------- navbar close --------------------------->
+
+<div class="container">
+
+
+  <div class="main-content"></div>
+  <div class="right-sidebar">
+    <div class="sidebar-news">
+      <img src="" class="info-icon">
+      <h3>right-sidebar</h3>
+      <a href="">Some random and usless fkin shit stuff</a>
+      <span>xDxDXDxDXDxDxDXDxDXD </span>
+
+      <a href="">Some random and usless fkin shit stuff</a>
+      <span>xDxDXDxDXDxDxDXDxDXD</span>
+
+      <a href="">Some random and usless fkin shit stuff</a>
+      <span>xDxDXDxDXDxDxDXDxDXD</span>
+
+      <a href="">Some random and usless fkin shit stuff</a>
+      <span>xDxDXDxDXDxDxDXDxDXD</span>
+
+     
+    </div>
+
+    <div class="sidebar-ad">
+      <small>Ad</small>
+      <p>Master the 5 bullshit stuff</p>
+      <div>
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+      <b>Brand and kakgjak jagk ja</b>
+      <a href="#" class="ad-link">Learn more</a>
+    </div> 
+  </div>
+</div>
