--- a/app-frontend/src/app/app.component.scss
+++ b/app-frontend/src/app/app.component.scss
@@ -4,10 +4,7 @@
   font-family: sans-serif;
   box-sizing: border-box;
 }
-body {
-  background: #ffffff;
-  color: #bbb;
-}
+
 a {
   text-decoration: none;
   color: #bbb;
@@ -107,6 +104,12 @@ position: relative;
   margin-top: 15px;
 }
 
+.sidebar-news {
+  background-color: #fff;
+  padding: 10px 25px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
 .sidebar-news h3 {
   font-size: 18px;
   font-weight: 600;
@@ -152,13 +155,278 @@ position: relative;
 
 .sidebar-ad b {
   display: block;
- 
+  font-weight: 500;
+  margin-top: 10px;
 }
 
+.ad-link {
+  display: inline-block;
+  border: 1px solid #ff0000;
+  border-radius: 30px;
+  padding: 5px 15px;
+  color: #ff0000;
+  font-weight: 500;
+  margin: 20px auto 10px;
+}
 
+.sidebar-useful-links {
+  padding: 15px 25px;
+  text-align: center;
+}
 
+.sidebar-useful-links a {
+  display: inline-block;
+  font-size: 14px;
+  margin: 4px 2px;
+}
 
+.copyright-msg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  margin-top: 10px;
+  font-weight: 500;
+}
+
+.copyright-msg img {
+  width: 18px;
+  margin-right: 4px;
+}
+
+/* ----------------------------- right sidebar close */
 
 .main-content {
-  flex-basis: 47%;
+  flex-basis: 72%; /* 47 */
+  padding: 10px 25px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  background:#fff;
+}
+
+.profile-menu-wrap  {
+  position: absolute;
+  top: 100%;
+  right: 5%;
+  width: 320px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s;
+}
+
+.profile-menu-wrap.open-menu {
+  max-height: 400px;
+}
+
+.profile-menu {
+  background: #000000;
+  color: #fff;
+  padding: 20px;
+  margin: 10px;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+}
+
+.user-info img {
+  width: 50px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
+.user-info h3 {
+font-weight: 500;
+margin-bottom: -7px;
+}
+
+.user-info a {
+  color: #c9dbf8;
+  font-size: 13px;
+}
+
+.profile-menu hr {
+  border: 0;
+  height: 1px;
+  width: 100%;
+  background: #fff;
+  margin: 15px 0 10px;
+}
+
+.profile-menu-link {
+  display: flex;
+  align-items: center;
+  color: #fff;
+  margin: 12px 0;
+  font-size: 14px;
+}
+
+.profile-menu-link p {
+  width: 100%;
+}
+
+.profile-menu-link img {
+  width: 35px;
+  border-radius: 50% ;
+  margin-right: 15px;
+}
+
+/*----------------------próba druga ------------*/
+
+.main {
+
+  flex-basis: 73%;
+}
+
+.first-sidebar {
+flex-basis: 25%;
+align-items: flex-start;
+position: sticky;
+top: 73px;
+}
+
+.profile-container {
+  background-color: #fff;
+}
+
+.profile-container-inner {
+  padding: 0 4% 10px;
+}
+
+.profile-pic {
+  width: 150px;
+  border-radius: 50%;
+  margin-top: 5px;
+  padding: 5px;
+  background: #fff;
+}
+
+.profile-container h1 {
+  font-size: 28px;
+  font-weight: 600;
+  color: #222;
+}
+
+.profile-container b {
+  font-weight: 500;
+}
+
+.profile-container p {
+  margin-top: 5px;
+}
+
+.profile-container p a {
+  color: #ff0000;
+}
+
+.profile-description {
+  background: #fff;
+  padding: 20px 4% 30px;
+  margin: 12px 0;
+}
+.profile-description h2 {
+  color: #333;
+  margin: 10px 0 20px;
+  font-weight: 600;
+}
+
+.see-more-link {
+  display: block;
+  text-align: right;
+  font-size: 15px;
+}
+
+.profile-desc-row {
+  display: flex;
+  align-items: flex-start;
+  margin: 20px 0 ;
+}
+
+.profile-desc-row img {
+  width: 50px;
+  margin-right: 50px;
+  margin-top: 5px;
+}
+
+.profile-desc-row div {
+  width: 100%;
+}
+
+.profile-desc-row h3 {
+  font-size: 18px;
+  font-weight: 600;
+  color: #333;
+}
+
+.profile-desc-row b {
+  display: block;
+  font-weight: 500;
+  font-size: 15px ;
+}
+
+.profile-desc-row p {
+  margin-top: 15px;
+}
+
+.profile-desc-row hr {
+  border: 0;
+  border-bottom:  1px solid #999;
+  margin-top: 10px;
+}
+
+.first-sidebar .sidebar-ad {
+  margin: 0;
+}
+
+.sidebar-people {
+  background: #fff;
+  padding: 15px 25px;
+  margin: 12px 0;
+  font-size: 12px;
+}
+
+.sidebar-people h3 {
+  font-size: 16px;
+  font-weight: 600;
+  margin: 10px 0 20px;
+}
+
+.sidebar-people-row {
+  display: flex;
+  align-items: center;
+  margin: 6px 0;
+}
+
+.sidebar-people-row img {
+  width: 40px;
+  border-radius: 50%;
+  margin-right: 8px ;
+  margin-top: 5px;
+}
+
+.sidebar-people-row h2 {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.sidebar-people-row a {
+  display: inline-block;
+  margin: 10px 0;
+  padding:5px 25px;
+  border: 1px solid #333;
+  border-radius: 30px;
+  font-weight: 500;
+}
+
+.profile-footer {
+  padding: 0 6% 30px;
+}
+
+.profile-footer .sidebar-useful-links {
+  text-align: left;
+  padding: 0;
+}
+
+.profile-footer .copyright-msg {
+ justify-content: flex-start;
 }
