--- a/app-frontend/src/app/app.component.html
+++ b/app-frontend/src/app/app.component.html
@@ -152,7 +152,7 @@
 
 
 <!----- 2 próba-->
-
+<!---
 <nav class="navbar">
   <div class="navbar-left">
     <a href="app.component.html" class="logo"><img src=""></a>
@@ -174,8 +174,9 @@
    
    </div>
   </div>
+-->
 <!----------- ------ profile menu --onclick="toggleMenu()"--------  id="profileMenu"--->
-
+<!---
 <div class="profile-menu-wrap"        >
   <div class="profile-menu">
     <div class="user-info">
@@ -216,9 +217,9 @@
 
 
 </nav>
-
+-->
 <!-- ---------------------- navbar close --------------------------->
-
+<!--
 <div class="container">
   <div class="main">
     <div class="profile-container">
@@ -344,7 +345,7 @@
     </div>
   </div>
 </div>
-
+-->
 <!--<script>
 
   let profileMenu = document.getElementById("profileMenu");
@@ -354,3 +355,49 @@
   }
 </script>
 -->
+
+
+<section>
+  
+  <h2>Make the most of your professional life</h2>
+  <form>
+      <div class="form_group">
+          <label for="email">Email</label>
+          <input type="email" id="email" autocomplete="off">
+      </div>
+      <div class="form_group">
+          <label for="password">Password (6 or more characters)</label>
+          <input type="password" id="password">
+      </div>
+      <p>By clicking Agree & Join, you agree to the <a href="#">User Agreement</a>, <a href="#">Privacy Policy</a>, and <a href="#">Cookie Policy</a>.</p>
+      <button class="join-btn">Agree & Join</button>
+      <div class="separator">
+          <div class="line"></div>
+          <h4>or</h4>
+          <div class="line"></div>
+      </div>
+      <button class="google-btn">
+          <img src="google-logo.png">
+          Join with Google
+      </button>
+      <p class="signin-para">Already on <a href="#">Sign in</a></p>
+  </form>
+  <p class="get-help">Looking to create a page for a business? <a href="#">Get help</a></p>
+</section>
+<footer>
+  <div class="copyright">
+      <img src="">
+      <p>&copy;</p>
+      <p>2021</p>
+  </div>
+  <a href="#">About</a>
+  <a href="#">Accessibility</a>
+  <a href="#">User Agreement</a>
+  <a href="#">Privacy Policy</a>
+  <a href="#">Cookie Policy</a>
+  <a href="#">Copyright Policy</a>
+  <a href="#">Brand Policy</a>
+  <a href="#">Guest Controls</a>
+  <a href="#">Community Guidelines</a>
+  <a href="#">Language</a>
+</footer>
