deleted useless stuff

--- a/app-frontend/src/app/app.component.html
+++ b/app-frontend/src/app/app.component.html
@@ -377,7 +377,7 @@
           <div class="line"></div>
       </div>
       <button class="google-btn">
-          <img src="google-logo.png">
+          <img src="images/google-logo.png">
           Join with Google
       </button>
       <p class="signin-para">Already on <a href="#">Sign in</a></p>
