--- a/app-frontend/src/app/app.component.scss
+++ b/app-frontend/src/app/app.component.scss
@@ -552,7 +552,7 @@ form .google-btn {
 form .google-btn:hover {
     box-shadow: 0 0 0 2px #FF0000;
     background-color: rgba(10, 102, 194, .05);
-}FF0000.google-btn img {
+}.google-btn img {
     height: 20px;
 }
 .signin-para {
