added findByName functionality

--- a/app-frontend/src/app/app.component.html
+++ b/app-frontend/src/app/app.component.html
@@ -380,7 +380,7 @@
           <img src="google-logo.png">
           Join with Google
       </button>
-      <p class="signin-para">Already on <a href="#">Sign in</a></p>
+      <p class="signin-para">Already on <a href="#" (click)="tryLogIn()">Sign in</a></p>
   </form>
   <p class="get-help">Looking to create a page for a business? <a href="#">Get help</a></p>
 </section>
