--- a/app-frontend/src/app/app.component.html
+++ b/app-frontend/src/app/app.component.html
@@ -160,7 +160,7 @@
   </div>
   <div class="navbar-center">
     <ul>
-      <li><a href="#" class="active-link"><img src=""> <span>Home</span></a></li>
+      <li><a href="#" class="active-link"><img src="images/home.png"> <span>Home</span></a></li>
       <li><a href="#"><img src=""> <span>Stwórz projekt</span></a></li>
       <li><a href="#"><img src=""> <span>Przydzielanie zespołów</span></a></li>
       <li><a href="#"><img src=""> <span>użytkownicy</span></a></li>
