--- a/app-frontend/src/app/app.component.html
+++ b/app-frontend/src/app/app.component.html
@@ -357,7 +357,7 @@
 -->
 
 
-<section>
+<!-- <section>
   
   <h2>Make the most of your professional life</h2>
   <form>
@@ -400,4 +400,6 @@
   <a href="#">Guest Controls</a>
   <a href="#">Community Guidelines</a>
   <a href="#">Language</a>
-</footer>
+</footer> -->
+
+<router-outlet></router-outlet>
