--- a/app-frontend/src/app/login-page/login-page.component.html
+++ b/app-frontend/src/app/login-page/login-page.component.html
@@ -1,3 +1,3 @@
-<input type="text" id="username">
-<p>login-page works!</p>
+<input type="text" [(ngModel)]="usernameInput">
+<button (click)="tryLogIn()">login</button>
 <!-- strona do logowania -->
