finished veryficaiton & validation, changed some objects type in sevices to any for ease of use

--- a/app-frontend/src/app/login-page/login-page.component.html
+++ b/app-frontend/src/app/login-page/login-page.component.html
@@ -1,3 +1,4 @@
-<input type="text" [(ngModel)]="usernameInput">
+<input type="text" [(ngModel)]="usernameInput" id="1">
+<input type="text" [(ngModel)]="passwordInput" id="2">
 <button (click)="tryLogIn()">login</button>
 <!-- strona do logowania -->
