added put functionallity, tested but not working

--- a/app-frontend/src/app/user/user-edit/user-edit.component.html
+++ b/app-frontend/src/app/user/user-edit/user-edit.component.html
@@ -1,2 +1,8 @@
-<p>user-edit works!</p>
+<input type="number" placeholder="id" [(ngModel)]="userId">
+<input type="text" placeholder="name" [(ngModel)]="newName">
+<input type="text" placeholder="username" [(ngModel)]="newUsername">
+<input type="text" placeholder="password" [(ngModel)]="newPassword">
+<input type="text" placeholder="email" [(ngModel)]="newEmail">
+<input type="text" placeholder="rank" [(ngModel)]="newRank">
+<button (click)="update()">update</button>
 <!-- tu będzie można edytowwać swój profil-->
