--- a/app-frontend/src/app/login-page/login-page.component.html
+++ b/app-frontend/src/app/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<input type="text" [(ngModel)]="usernameInput" id="1">
-<input type="text" [(ngModel)]="passwordInput" id="2">
+<input type="text" [(ngModel)]="username">
+<input type="text" [(ngModel)]="password">
 <button (click)="tryLogIn()">login</button>
 <!-- strona do logowania -->
