added media-query to login-page.component & added code to main/login

--- a/app-frontend/src/app/main-page/main-page.component.html
+++ b/app-frontend/src/app/main-page/main-page.component.html
@@ -1,2 +1,202 @@
 <p>main-page works!</p>
 <!-- tu będzie widać wszystkie projekty a w nich zadania i zespoły-->
+<nav class="navbar">
+  <div class="navbar-left">
+    <a href="app.component.html" class="logo"><img src=""></a>
+
+  </div>
+  <div class="navbar-center">
+    <ul>
+      <li><a href="#" class="active-link"><img src="images/home.png"> <span>Home</span></a></li>
+      <li><a href="#"><img src=""> <span>Stwórz projekt</span></a></li>
+      <li><a href="#"><img src=""> <span>Przydzielanie zespołów</span></a></li>
+      <li><a href="#"><img src=""> <span>użytkownicy</span></a></li>
+      <li><a href="#"><img src=""> <span>coś tam</span></a></li>
+    </ul>
+  </div>
+  <div class="navbar-right">
+   <div class="user-structure">
+   
+    <img src="" class="nav-profile-img" >
+   
+   </div>
+  </div>
+
+<!----------- ------ profile menu --onclick="toggleMenu()"--------  id="profileMenu"--->
+
+<div class="profile-menu-wrap"        >
+  <div class="profile-menu">
+    <div class="user-info">
+      <img src="">
+      <div>
+        <h3>Franek Bananek</h3>
+        <a href="#">See your profile</a>
+      </div>
+    </div>
+    <hr>
+    <a href="#" class="profile-menu-link">
+      <img src="">
+      <p>Give Feedback</p>
+      <span>></span>
+    </a>
+    <a href="#" class="profile-menu-link">
+      <img src="">
+      <p>Settings & Privacy</p>
+      <span>></span>
+    </a>
+    <a href="#" class="profile-menu-link">
+      <img src="">
+      <p>Help & Support</p>
+      <span>></span>
+    </a>
+    <a href="#" class="profile-menu-link">
+      <img src="">
+      <p>Display & Accessibility</p>
+      <span>></span>
+    </a>
+    <a href="#" class="profile-menu-link">
+      <img src="">
+      <p>Logout</p>
+      <span>></span>
+    </a>
+  </div>
+</div>
+
+</nav>
+
+<!-- ---------------------- navbar close --------------------------->
+
+<div class="container">
+  <div class="main">
+    <div class="profile-container">
+      <img src="" width="100%">
+      <div class="profile-container-ineer">
+        <img src="" class="profile-pic">
+        <h1>Franek Bananek</h1>
+        <b>coś tak kaegkakgj ak g | jajgjagjak ga jagjagj aag aag </b>
+        <p>Lokacja &middot; <a href="">Contact Info</a></p>
+        <div class="mutual-connection">
+          <img src="" alt="">
+          <span>1 mutual connection: xDxDXDxDXDxDxDXDxDXD</span>
+        </div>
+        <div class="profile btn">
+          <a href="" class="primary-btn"><img src="">Connect</a>
+          <a href=""><img src="" alt="">Message</a>
+        </div>
+      </div>
+    </div>
+
+<div class="profile-description">
+  <h2>sałata wymiata honej bubu</h2>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum neque id itaque unde, obcaecati rem enim fuga explicabo consectetur vero! Iure dolores voluptates odit in magnam consequuntur ratione unde dolorem. Iste dolorum voluptatibus reprehenderit quis veritatis quasi possimus vitae quod magni cupiditate? Soluta voluptatum animi odit fugiat iste amet! Minima aspernatur cumque, quod laudantium quo fugiat rem culpa sit ut! Asperiores amet excepturi maxime aut consequatur nobis temporibus laboriosam aspernatur eos minima dolore illum, sit expedita facere earum dolor quia magnam tempore atque, praesentium veniam saepe molestiae. Numquam consequuntur temporibus, officia voluptates dignissimos quisquam earum aliquid consequatur harum ratione. Deserunt!</p>
+  <a href="#" class="see-more-link">See more...</a>
+</div>
+
+<div class="profile-description">
+  <h2>Kek der kek</h2>
+  <div class="profile-desc-row">
+    <img src="" >
+    <div>
+      <h3>Random stuff kagagagfagsa</h3>
+      <b>jahg jajga &middot; gkajkg aj kgjak </b>
+      <b>Mar 2025 - Present &middot; </b>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, laborum! Tempore, asperiores eaque dolores quisquam aut nam consectetur maxime aperiam id suscipit sint ipsam voluptates blanditiis quibusdam ut rerum quod.</p>
+<hr>
+    </div>
+  </div>
+</div>
+
+<div class="profile-description">
+  <h2>sałata wymiata honej bubu</h2>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum neque id itaque unde, obcaecati rem enim fuga explicabo consectetur vero! Iure dolores voluptates odit in magnam consequuntur ratione unde dolorem. Iste dolorum voluptatibus reprehenderit quis veritatis quasi possimus vitae quod magni cupiditate? Soluta voluptatum animi odit fugiat iste amet! Minima aspernatur cumque, quod laudantium quo fugiat rem culpa sit ut! Asperiores amet excepturi maxime aut consequatur nobis temporibus laboriosam aspernatur eos minima dolore illum, sit expedita facere earum dolor quia magnam tempore atque, praesentium veniam saepe molestiae. Numquam consequuntur temporibus, officia voluptates dignissimos quisquam earum aliquid consequatur harum ratione. Deserunt!</p>
+  <a href="#" class="see-more-link">See more...</a>
+</div>
+
+  </div>
+
+  <div class="first-sidebar">
+    <div class="sidebar-ad">
+      <small>Ad</small>
+      <p>Master the 5 bullshit stuff</p>
+      <div>
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+      <b>Brand and kakgjak jagk ja</b>
+      <a href="#" class="ad-link">Learn more</a>
+    </div> 
+
+<div class="sidebar-people">
+  <h3>People you may know</h3>
+  <div class="sidebar-people-row">
+    <img src="">
+    <div>
+      <h2>Franek Bananek</h2>
+      <p>Head of the Krycha Kebab</p>
+      <a href="#">Connect</a>
+    </div>
+  </div>
+  <div class="sidebar-people-row">
+    <img src="">
+    <div>
+      <h2>Jacek Rusin</h2>
+      <p>Head of the Krycha Kebab</p>
+      <a href="#">Connect</a>
+    </div>
+  </div>
+  <div class="sidebar-people-row">
+    <img src="">
+    <div>
+      <h2>Giga Niga</h2>
+      <p>Head of the Krycha Kebab</p>
+      <a href="#">Connect</a>
+    </div>
+  </div>
+  <div class="sidebar-people-row">
+    <img src="">
+    <div>
+      <h2>Rolando</h2>
+      <p>Head of the Krycha Kebab</p>
+      <a href="#">Connect</a>
+    </div>
+  </div>
+  <div class="sidebar-people-row">
+    <img src="">
+    <div>
+      <h2>Franek Bananek</h2>
+      <p>Head of the Krycha Kebab</p>
+      <a href="#">Connect</a>
+    </div>
+  </div>
+</div>
+
+  </div>
+</div>
+
+<div class="profile-footer">
+  <div class="sidebar-useful-links">
+    <a href="#">About</a>
+    <a href="#">Accessiblity</a>
+    <a href="#">Help Center</a>
+    <a href="#">Privacy Policy</a>
+    <a href="#">Advertising</a>
+    <a href="#">Get the Nap</a>
+    <a href="#">More</a>
+
+    <div class="copyright-msg">
+      <img src="" alt="">
+      <p> &#169; 2025. All right reserved</p>
+    </div>
+  </div>
+</div>
+
+<!--<script>
+
+  let profileMenu = document.getElementById("profileMenu");
+
+  function toggleMenu(){
+    profileMenu.classList.toggle("open-menu");
+  }
+</script>
+-->
+
