--- a/app-frontend/src/app/login-page/login-page.component.html
+++ b/app-frontend/src/app/login-page/login-page.component.html
@@ -2,3 +2,48 @@
 <input type="text" [(ngModel)]="password">
 <button (click)="tryLogIn()">login</button>
 <!-- strona do logowania -->
+
+<section>
+  
+  <h2>Make the most of your professional life</h2>
+  <form>
+      <div class="form_group">
+          <label for="email">Email</label>
+          <input type="email" id="email" autocomplete="off">
+      </div>
+      <div class="form_group">
+          <label for="password">Password (6 or more characters)</label>
+          <input type="password" id="password">
+      </div>
+      <p>By clicking Agree & Join, you agree to the <a href="#">User Agreement</a>, <a href="#">Privacy Policy</a>, and <a href="#">Cookie Policy</a>.</p>
+      <button class="join-btn">Agree & Join</button>
+      <div class="separator">
+          <div class="line"></div>
+          <h4>or</h4>
+          <div class="line"></div>
+      </div>
+      <button class="google-btn">
+          <img src="google-logo.png">
+          Join with Google
+      </button>
+      <p class="signin-para">Already on <a href="#" ng s >Sign in</a></p>
+  </form>
+  <p class="get-help">Looking to create a page for a business? <a href="#">Get help</a></p>
+</section>
+<footer>
+  <div class="copyright">
+      <img src="">
+      <p>&copy;</p>
+      <p>2025</p>
+  </div>
+  <a href="#">About</a>
+  <a href="#">Accessibility</a>
+  <a href="#">User Agreement</a>
+  <a href="#">Privacy Policy</a>
+  <a href="#">Cookie Policy</a>
+  <a href="#">Copyright Policy</a>
+  <a href="#">Brand Policy</a>
+  <a href="#">Guest Controls</a>
+  <a href="#">Community Guidelines</a>
+  <a href="#">Language</a>
+</footer>
