--- a/app-frontend/src/app/login-page/login-page.component.html
+++ b/app-frontend/src/app/login-page/login-page.component.html
@@ -1,6 +1,7 @@
 <input type="text" [(ngModel)]="username">
 <input type="text" [(ngModel)]="password">
 <button (click)="tryLogIn()">login</button>
+<button [routerLink]="['']">main-page</button>
 <!-- strona do logowania -->
 
 <section>
