--- a/app-frontend/src/app/main-page/main-page.component.html
+++ b/app-frontend/src/app/main-page/main-page.component.html
@@ -1,4 +1,5 @@
 <p>main-page works!</p>
+<button [routerLink]="['/login']">login-page</button>
 <!-- tu będzie widać wszystkie projekty a w nich zadania i zespoły-->
 <nav class="navbar">
   <div class="navbar-left">
