added images, updated login/main-page.components

--- a/app-frontend/src/app/main-page/main-page.component.html
+++ b/app-frontend/src/app/main-page/main-page.component.html
@@ -1,17 +1,17 @@
-<p>main-page works!</p>
+
 <!-- tu będzie widać wszystkie projekty a w nich zadania i zespoły-->
 <nav class="navbar">
   <div class="navbar-left">
-    <a href="app.component.html" class="logo"><img src=""></a>
+    <a href="main-page.component.html" class="logo"><img src="/images/logo.png"></a>
 
   </div>
   <div class="navbar-center">
     <ul>
-      <li><a href="#" class="active-link"><img src="images/home.png"> <span>Home</span></a></li>
-      <li><a href="#"><img src=""> <span>Stwórz projekt</span></a></li>
-      <li><a href="#"><img src=""> <span>Przydzielanie zespołów</span></a></li>
-      <li><a href="#"><img src=""> <span>użytkownicy</span></a></li>
-      <li><a href="#"><img src=""> <span>coś tam</span></a></li>
+      <li><a href="#" class="active-link"><img src="/images/home.png"> <span>Home</span></a></li>
+      <li><a href="#"><img src="/images/network.png"> <span>Stwórz projekt</span></a></li>
+      <li><a href="#"><img src="/images/jobs.png"> <span>Przydzielanie zespołów</span></a></li>
+      <li><a href="#"><img src="/images/message.png"> <span>użytkownicy</span></a></li>
+      <li><a href="#"><img src="/images/notification.png"> <span>coś tam</span></a></li>
     </ul>
   </div>
   <div class="navbar-right">
@@ -87,23 +87,23 @@
     </div>
 
 <div class="profile-description">
-  <h2>sałata wymiata honej bubu</h2>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum neque id itaque unde, obcaecati rem enim fuga explicabo consectetur vero! Iure dolores voluptates odit in magnam consequuntur ratione unde dolorem. Iste dolorum voluptatibus reprehenderit quis veritatis quasi possimus vitae quod magni cupiditate? Soluta voluptatum animi odit fugiat iste amet! Minima aspernatur cumque, quod laudantium quo fugiat rem culpa sit ut! Asperiores amet excepturi maxime aut consequatur nobis temporibus laboriosam aspernatur eos minima dolore illum, sit expedita facere earum dolor quia magnam tempore atque, praesentium veniam saepe molestiae. Numquam consequuntur temporibus, officia voluptates dignissimos quisquam earum aliquid consequatur harum ratione. Deserunt!</p>
-  <a href="#" class="see-more-link">See more...</a>
-</div>
-
-<div class="profile-description">
-  <h2>Kek der kek</h2>
+  <h2>Projekt 1</h2>
   <div class="profile-desc-row">
-    <img src="" >
+    <img src="/images/microsoft.png" >
     <div>
-      <h3>Random stuff kagagagfagsa</h3>
-      <b>jahg jajga &middot; gkajkg aj kgjak </b>
-      <b>Mar 2025 - Present &middot; </b>
+      <h3>Lead Front-End Developer</h3>
+      <b>Microsoft &middot; Full-time </b>
+      <b>Feb 2025 - Present &middot; 2 months</b>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, laborum! Tempore, asperiores eaque dolores quisquam aut nam consectetur maxime aperiam id suscipit sint ipsam voluptates blanditiis quibusdam ut rerum quod.</p>
 <hr>
     </div>
   </div>
+</div>
+
+<div class="profile-description">
+  <h2>sałata wymiata honej bubu</h2>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum neque id itaque unde, obcaecati rem enim fuga explicabo consectetur vero! Iure dolores voluptates odit in magnam consequuntur ratione unde dolorem. Iste dolorum voluptatibus reprehenderit quis veritatis quasi possimus vitae quod magni cupiditate? Soluta voluptatum animi odit fugiat iste amet! Minima aspernatur cumque, quod laudantium quo fugiat rem culpa sit ut! Asperiores amet excepturi maxime aut consequatur nobis temporibus laboriosam aspernatur eos minima dolore illum, sit expedita facere earum dolor quia magnam tempore atque, praesentium veniam saepe molestiae. Numquam consequuntur temporibus, officia voluptates dignissimos quisquam earum aliquid consequatur harum ratione. Deserunt!</p>
+  <a href="#" class="see-more-link">See more...</a>
 </div>
 
 <div class="profile-description">
