--- a/app-frontend/src/app/login-page/login-page.component.html
+++ b/app-frontend/src/app/login-page/login-page.component.html
@@ -4,7 +4,7 @@
 <!-- strona do logowania -->
 
 <section>
-  
+  <img src="/images/logo.png" alt="">
   <h2>Make the most of your professional life</h2>
   <form>
       <div class="form_group">
@@ -23,7 +23,7 @@
           <div class="line"></div>
       </div>
       <button class="google-btn">
-          <img src="google-logo.png">
+          <img src="/images/google-logo.png">
           Join with Google
       </button>
       <p class="signin-para">Already on <a href="#" ng s >Sign in</a></p>
@@ -32,7 +32,7 @@
 </section>
 <footer>
   <div class="copyright">
-      <img src="">
+      <img src="/images/logo.png">
       <p>&copy;</p>
       <p>2025</p>
   </div>
