--- a/app-frontend/src/app/main-page/main-page.component.scss
+++ b/app-frontend/src/app/main-page/main-page.component.scss
@@ -21,7 +21,7 @@ a {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.logo {
+.logo img{
   width: 30px;
   margin-right: 15px;
   display: block;
