--- a/app-frontend/src/app/project/project-view/project-view.component.html
+++ b/app-frontend/src/app/project/project-view/project-view.component.html
@@ -1,2 +1,17 @@
 <p>project-view works!</p>
 <!-- tu będą widoczne wszystkie detale projektu tzn. status, zadania, zespoły przynależące -->
+
+<div class="container">
+  <div class="todo-app">
+  <h2>To-Do List <img src=""></h2>
+  <div class="row">
+    <input type="text" id="input-box"  placeholder="Add your text">
+    <button>Add</button>
+  </div>
+  <ul id="list-cointainer">
+    <li class="checked">Task 1</li>
+    <li>Task 2</li>
+    <li>Task 3</li>
+  </ul>
+</div>
+</div>
