tested db and page functionallity, main page testing, minor issue with findUserProjects running on /login

--- a/app-frontend/src/app/login-page/login-page.component.html
+++ b/app-frontend/src/app/login-page/login-page.component.html
@@ -24,7 +24,7 @@
           <div class="line"></div>
       </div>
       <button class="google-btn">
-          <img src="google-logo.png">
+          <!-- <img src="google-logo.png"> -->
           Join with Google
       </button>
       <p class="signin-para">Already on <a href="#" ng s >Sign in</a></p>
