main page html lorem fix

--- a/app-frontend/src/app/main-page/main-page.component.html
+++ b/app-frontend/src/app/main-page/main-page.component.html
@@ -30,7 +30,7 @@
     <div class="user-info">
       <img src="">
       <div>
-        <h3>Franek Bananek</h3>
+        <h3>Lorem, ipsum dolor.</h3>
         <a href="#">See your profile</a>
       </div>
     </div>
@@ -73,12 +73,12 @@
       <img src="" width="100%">
       <div class="profile-container-ineer">
         <img src="" class="profile-pic">
-        <h1>Franek Bananek</h1>
-        <b>coś tak kaegkakgj ak g | jajgjagjak ga jagjagj aag aag </b>
+        <h1>Lorem, ipsum dolor.</h1>
+        <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, sed. </b>
         <p>Lokacja &middot; <a href="">Contact Info</a></p>
         <div class="mutual-connection">
           <img src="" alt="">
-          <span>1 mutual connection: xDxDXDxDXDxDxDXDxDXD</span>
+          <span>1 mutual connection: Lorem ipsum dolor sit.</span>
         </div>
         <div class="profile btn">
           <a href="" class="primary-btn"><img src="">Connect</a>
@@ -88,18 +88,18 @@
     </div>
 
 <div class="profile-description">
-  <h2>sałata wymiata honej bubu</h2>
+  <h2>Lorem ipsum dolor sit amet consectetur.</h2>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum neque id itaque unde, obcaecati rem enim fuga explicabo consectetur vero! Iure dolores voluptates odit in magnam consequuntur ratione unde dolorem. Iste dolorum voluptatibus reprehenderit quis veritatis quasi possimus vitae quod magni cupiditate? Soluta voluptatum animi odit fugiat iste amet! Minima aspernatur cumque, quod laudantium quo fugiat rem culpa sit ut! Asperiores amet excepturi maxime aut consequatur nobis temporibus laboriosam aspernatur eos minima dolore illum, sit expedita facere earum dolor quia magnam tempore atque, praesentium veniam saepe molestiae. Numquam consequuntur temporibus, officia voluptates dignissimos quisquam earum aliquid consequatur harum ratione. Deserunt!</p>
   <a href="#" class="see-more-link">See more...</a>
 </div>
 
 <div class="profile-description">
-  <h2>Kek der kek</h2>
+  <h2>Lorem, ipsum dolor.</h2>
   <div class="profile-desc-row">
     <img src="" >
     <div>
-      <h3>Random stuff kagagagfagsa</h3>
-      <b>jahg jajga &middot; gkajkg aj kgjak </b>
+      <h3>Lorem ipsum dolor sit.</h3>
+      <b>Lorem ipsum dolor  &middot; sit amet consectetur. </b>
       <b>Mar 2025 - Present &middot; </b>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, laborum! Tempore, asperiores eaque dolores quisquam aut nam consectetur maxime aperiam id suscipit sint ipsam voluptates blanditiis quibusdam ut rerum quod.</p>
 <hr>
@@ -108,7 +108,7 @@
 </div>
 
 <div class="profile-description">
-  <h2>sałata wymiata honej bubu</h2>
+  <h2>Lorem ipsum dolor sit amet.</h2>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum neque id itaque unde, obcaecati rem enim fuga explicabo consectetur vero! Iure dolores voluptates odit in magnam consequuntur ratione unde dolorem. Iste dolorum voluptatibus reprehenderit quis veritatis quasi possimus vitae quod magni cupiditate? Soluta voluptatum animi odit fugiat iste amet! Minima aspernatur cumque, quod laudantium quo fugiat rem culpa sit ut! Asperiores amet excepturi maxime aut consequatur nobis temporibus laboriosam aspernatur eos minima dolore illum, sit expedita facere earum dolor quia magnam tempore atque, praesentium veniam saepe molestiae. Numquam consequuntur temporibus, officia voluptates dignissimos quisquam earum aliquid consequatur harum ratione. Deserunt!</p>
   <a href="#" class="see-more-link">See more...</a>
 </div>
@@ -118,12 +118,12 @@
   <div class="first-sidebar">
     <div class="sidebar-ad">
       <small>Ad</small>
-      <p>Master the 5 bullshit stuff</p>
+      <p>Lorem ipsum dolor sit.</p>
       <div>
         <img src="" alt="">
         <img src="" alt="">
       </div>
-      <b>Brand and kakgjak jagk ja</b>
+      <b>Lorem ipsum dolor sit.</b>
       <a href="#" class="ad-link">Learn more</a>
     </div> 
 
@@ -132,40 +132,40 @@
   <div class="sidebar-people-row">
     <img src="">
     <div>
+      <h2>Lorem, ipsum dolor.</h2>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <a href="#">Connect</a>
+    </div>
+  </div>
+  <div class="sidebar-people-row">
+    <img src="">
+    <div>
+      <h2>kamil kasiepik</h2>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <a href="#">Connect</a>
+    </div>
+  </div>
+  <div class="sidebar-people-row">
+    <img src="">
+    <div>
+      <h2>adam zachy</h2>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <a href="#">Connect</a>
+    </div>
+  </div>
+  <div class="sidebar-people-row">
+    <img src="">
+    <div>
+      <h2>magda dąbska</h2>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <a href="#">Connect</a>
+    </div>
+  </div>
+  <div class="sidebar-people-row">
+    <img src="">
+    <div>
       <h2>Franek Bananek</h2>
-      <p>Head of the Krycha Kebab</p>
-      <a href="#">Connect</a>
-    </div>
-  </div>
-  <div class="sidebar-people-row">
-    <img src="">
-    <div>
-      <h2>Jacek Rusin</h2>
-      <p>Head of the Krycha Kebab</p>
-      <a href="#">Connect</a>
-    </div>
-  </div>
-  <div class="sidebar-people-row">
-    <img src="">
-    <div>
-      <h2>Giga Niga</h2>
-      <p>Head of the Krycha Kebab</p>
-      <a href="#">Connect</a>
-    </div>
-  </div>
-  <div class="sidebar-people-row">
-    <img src="">
-    <div>
-      <h2>Rolando</h2>
-      <p>Head of the Krycha Kebab</p>
-      <a href="#">Connect</a>
-    </div>
-  </div>
-  <div class="sidebar-people-row">
-    <img src="">
-    <div>
-      <h2>Franek Bananek</h2>
-      <p>Head of the Krycha Kebab</p>
+      <p>Lorem ipsum dolor sit amet.</p>
       <a href="#">Connect</a>
     </div>
   </div>
