--- a/app-frontend/src/app/main-page/main-page.component.html
+++ b/app-frontend/src/app/main-page/main-page.component.html
@@ -17,7 +17,7 @@
   <div class="navbar-right">
    <div class="user-structure">
    
-    <img src="" class="nav-profile-img" >
+    <img src="/images/logo.png" class="nav-profile-img" >
    
    </div>
   </div>
