--- a/app-frontend/src/app/user/user-add/user-add.component.html
+++ b/app-frontend/src/app/user/user-add/user-add.component.html
@@ -4,4 +4,4 @@
 <input type="text" placeholder="email" [(ngModel)]="addEmail" [ngModelOptions]="{standalone: true}">
 <input type="text" placeholder="rank" [(ngModel)]="addRank" [ngModelOptions]="{standalone: true}">
 <button (click)="addUser()">Add new User</button>
-<p [(ngModel)]="result" [ngModelOptions]="{standalone: true}"></p>
+<p>{{result}}</p>
