--- a/app-frontend/src/app/main-page/main-page.component.html
+++ b/app-frontend/src/app/main-page/main-page.component.html
@@ -80,6 +80,31 @@
       </div>
     </div>
 
+    <div *ngFor="let project of projectsData" class="profile-description">
+      <h2>{{project.name}}</h2>
+      <div class="deadline">
+        <h4>deadline: {{project.deadline}}</h4>
+      </div>
+      <ul>
+        <p>tasks:</p>
+        <p *ngFor="let task of project.tasks">
+          - {{task.overview}}: {{task.status}}
+        </p>
+        <br>
+        <hr>
+        <br>
+        <p>teams:</p>
+        <p *ngFor="let team of project.teams">
+          - {{team.name}}
+        </p>
+        <br>
+        <hr>
+      </ul>
+      <br>
+      
+      <a [routerLink]="['/project-view']" class="see-more-link">See more...</a>
+    </div>
+
 <div *ngFor="let project of projectsData" class="profile-description">
   <h2>{{project.name}}</h2>
   <h4>deadline: {{project.deadline}}</h4>
@@ -107,7 +132,7 @@
 
   <div class="first-sidebar">
     <div class="sidebar-ad">
-      <small>Ad</small>
+      <small>Add</small>
       <p>Lorem ipsum dolor sit.</p>
       <div>
         <img src="" alt="">
