--- a/app-frontend/src/app/main-page/main-page.component.scss
+++ b/app-frontend/src/app/main-page/main-page.component.scss
@@ -7,7 +7,7 @@
 
 a {
   text-decoration: none;
-  color: #bbb;
+  color: #333;
 }
 .navbar {
   display: flex;
@@ -322,6 +322,39 @@ top: 73px;
   background: #fff;
   padding: 20px 4% 30px;
   margin: 12px 0;
+  position: relative;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.profile-description h2 {
+  color: #333;
+  margin: 10px 0 20px;
+  font-weight: 600;
+}
+
+.deadline {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 14px;
+  color: #777;
+  font-weight: 500;
+}
+
+.profile-description ul {
+  margin-left: 20px;
+}
+
+.see-more-link {
+  display: block;
+  text-align: right;
+  font-size: 15px;
+  margin-top: 10px;
+}
+/*.profile-description {
+  background: #fff;
+  padding: 20px 4% 30px;
+  margin: 12px 0;
 }
 .profile-description h2 {
   color: #333;
@@ -334,6 +367,7 @@ top: 73px;
   text-align: right;
   font-size: 15px;
 }
+  */
 
 .profile-desc-row {
   display: flex;
@@ -376,6 +410,10 @@ top: 73px;
 .first-sidebar .sidebar-ad {
   margin: 0;
 }
+
+
+
+
 
 .sidebar-people {
   background: #fff;
