--- a/app-frontend/src/app/project/project-edit/project-edit.component.html
+++ b/app-frontend/src/app/project/project-edit/project-edit.component.html
@@ -1,2 +1,65 @@
-<p>project-edit works!</p>
+
 <!-- tu będzie można edytować lub dodawać projekt -->
+ 
+<nav class="navbar">
+  <div class="navbar-left">
+    <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
+  </div>
+  <div class="navbar-center">
+    <ul>
+      <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png" alt="Home"> <span>Home</span></a></li>
+      <li><a [routerLink]="['/project-add']"><img src="/images/network.png" alt="Project Add"> <span>Stwórz projekt</span></a></li>
+      <li><a [routerLink]="['/team-add']"><img src="/images/jobs.png" alt="Team Add"> <span>Przydzielanie zespołów</span></a></li>
+      <li><a [routerLink]="['/team-edit']"><img src="/images/message.png" alt="Team Edit"> <span>Użytkownicy</span></a></li>
+      <li><a [routerLink]="['/login']"><img src="/images/notification.png" alt="Notifications"> <span>Coś tam</span></a></li>
+    </ul>
+  </div>
+  <div class="navbar-right">
+    <div class="user-structure">
+      <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['user-view']" alt="Profile">
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="main">
+    <div class="form-container">
+      <h1>Edytuj Projekt</h1>
+      <form>
+        <div class="form-group">
+          <label for="project-name">Nazwa projektu</label>
+          <input type="text" id="project-name" placeholder="Wpisz nazwę projektu">
+        </div>
+        <div class="form-group">
+          <label for="project-description">Opis projektu</label>
+          <textarea id="project-description" placeholder="Wpisz opis projektu"></textarea>
+        </div>
+        <div class="form-group">
+          <label for="project-deadline">Deadline</label>
+          <input type="date" id="project-deadline">
+        </div>
+        <div class="form-group">
+          <label for="project-teams">Wybierz zespół</label>
+          <select id="project-teams">
+            <option value="">Wybierz zespół</option>
+            <option value="team1">Zespół 1</option>
+            <option value="team2">Zespół 2</option>
+            <option value="team3">Zespół 3</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn">Zapisz zmiany</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div class="first-sidebar">
+    <div class="sidebar-ad">
+      <small>Ad</small>
+      <p>Lorem ipsum dolor sit.</p>
+      <b>Lorem ipsum dolor sit.</b>
+      <a href="#" class="ad-link">Learn more</a>
+    </div>
+  </div>
+</div>
