--- a/app-frontend/src/app/team/team-view/team-view.component.html
+++ b/app-frontend/src/app/team/team-view/team-view.component.html
@@ -1,2 +1,62 @@
-<p>team-view works!</p>
+
 <!-- tu będą widoczne informacje o zespole-->
+<nav class="navbar">
+  <div class="navbar-left">
+    <a href="main-page.component.html" class="logo"><img src="/images/logo.png" alt="Logo"></a>
+  </div>
+  <div class="navbar-center">
+    <ul>
+      <li><a [routerLink]="['']" class="active-link"><img src="/images/home.png" alt="Home"> <span>Home</span></a></li>
+      <li><a [routerLink]="['/project-add']"><img src="/images/network.png" alt="Project Add"> <span>Stwórz projekt</span></a></li>
+      <li><a [routerLink]="['/team-add']"><img src="/images/jobs.png" alt="Team Add"> <span>Przydzielanie zespołów</span></a></li>
+      <li><a [routerLink]="['/team-edit']"><img src="/images/message.png" alt="Team Edit"> <span>Użytkownicy</span></a></li>
+      <li><a [routerLink]="['/login']"><img src="/images/notification.png" alt="Notifications"> <span>Coś tam</span></a></li>
+    </ul>
+  </div>
+  <div class="navbar-right">
+    <div class="user-structure">
+      <img src="/images/logo.png" class="nav-profile-img" [routerLink]="['user-view']" alt="Profile">
+    </div>
+  </div>
+</nav>
+
+
+
+<div class="container">
+  <div class="main">
+    <div class="team-info-container">
+      <h1>Informacje o Zespole</h1>
+      <div class="team-details">
+        <label>Nazwa zespołu:</label>
+        <p id="team-name">Zespół 1</p>
+      </div>
+      <div class="team-details">
+        <label>Liczba użytkowników:</label>
+        <p id="team-members-count">5</p>
+      </div>
+      <div class="team-details">
+        <label>Użytkownicy w zespole:</label>
+        <ul id="team-members">
+          <li>Jan Kowalski</li>
+          <li>Anna Nowak</li>
+          <li>Piotr Wiśniewski</li>
+          <li>Maria Lewandowska</li>
+          <li>Adam Zieliński</li>
+        </ul>
+      </div>
+      <div class="team-details">
+        <label>Data utworzenia:</label>
+        <p id="team-created">15 marca 2024</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="first-sidebar">
+    <div class="sidebar-ad">
+      <small>Ad</small>
+      <p>Lorem ipsum dolor sit.</p>
+      <b>Lorem ipsum dolor sit.</b>
+      <a href="#" class="ad-link">Learn more</a>
+    </div>
+  </div>
+</div>
